New and updated shaders, including terrains, water shaders and improvements to many others.

--- a/distancefield1.html
+++ b/distancefield1.html
@@ -213,14 +213,17 @@ var requestAnimationFrame = window.requestAnimationFrame || window.webkitRequest
                             window.mozRequestAnimationFrame || window.msRequestAnimationFrame || 
                             function(c) {window.setTimeout(c, 15)};
 
+var pause = false;
+var stats = new Stats();
+var aspect, gl;
 function init()
 {
    // create webgl context on the canvas element
-   var canvas = document.getElementById("canvas"),
-       aspect = canvas.width / canvas.height;
+   var canvas = document.getElementById("canvas");
+   aspect = canvas.width / canvas.height;
    try
    {
-      var gl = canvas.getContext("experimental-webgl");
+      gl = canvas.getContext("experimental-webgl");
    }
    catch (e)
    {
@@ -316,8 +319,14 @@ function init()
    }, false);
 }
       </script>
+      <script src="scripts/utils.js"></script>
+      <link rel="stylesheet" href="../../reset.css">
+      <link rel="stylesheet" href="./page.css">
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
    </head>
    <body onload="init()">
-      <canvas id="canvas" width="768" height="512">
+      <canvas id="canvas" width="768" height="512"></canvas>
+      <a href="#" id="fullscreen">Toggle Full Screen</a>
+      <a href="." id="back">Show me more awesome demos!</a>
    </body>
 </html>
