--- a/knot.html
+++ b/knot.html
@@ -280,9 +280,11 @@ var config = {
    }
 };
 
+var pause = false;
+var stats = new Stats();
+var aspect, gl;
 function init()
 {
-   var pause = false;
    document.addEventListener('keydown', function(e) {
       switch (e.keyCode)
       {
@@ -332,15 +334,14 @@ function init()
    panel.add(config.knot, "rotations").min(1).max(10).step(1);
    if (!mobile) panel.open();
    
-   var stats = new Stats();
    document.body.appendChild(stats.domElement);
    
    // create webgl context on the canvas element
-   var canvas = document.getElementById("canvas"),
-       aspect = canvas.width / canvas.height;
+   var canvas = document.getElementById("canvas");
+   aspect = canvas.width / canvas.height;
    try
    {
-      var gl = canvas.getContext("experimental-webgl");
+      gl = canvas.getContext("experimental-webgl");
    }
    catch (e)
    {
@@ -484,14 +485,19 @@ function init()
          gl.drawArrays(gl.TRIANGLES, 0, numItems);
          
          stats.end();
-         //pause = true;
       }
       requestAnimationFrame(f);
    })();
 }
       </script>
+      <script src="scripts/utils.js"></script>
+      <link rel="stylesheet" href="../../reset.css">
+      <link rel="stylesheet" href="./page.css">
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
    </head>
    <body onload="init()">
-      <canvas id="canvas" width="768" height="512">
+      <canvas id="canvas" width="768" height="512"></canvas>
+      <a href="#" id="fullscreen">Toggle Full Screen</a>
+      <a href="." id="back">Show me more awesome demos!</a>
    </body>
 </html>
