--- a/polyhedra3.html
+++ b/polyhedra3.html
@@ -66,8 +66,8 @@ uniform bool textureSurface;
 #define AO_SAMPLES 4
 #define RAY_DEPTH 128
 #define MAX_DEPTH 100.0
-#define SHADOW_RAY_DEPTH 32
-#define DISTANCE_MIN 0.002
+#define SHADOW_RAY_DEPTH 40
+#define DISTANCE_MIN 0.001
 #define PI 3.14159265
 #define NoiseSize 128.0
 #define NoiseRoughness 0.25
@@ -188,7 +188,7 @@ float Dist(vec3 pos)
          d = d + Noise(p*NoiseSize)*NoiseRoughness/NoiseSize;
       }
    }
-   /*else if (textureSurface)
+   /*else if (ts)
    {
       d = flr + Noise(p.xz*NoiseSize)*NoiseRoughness/NoiseSize;
    }
@@ -217,15 +217,15 @@ float CalcAO(vec3 p, vec3 n)
 float SoftShadow(vec3 ro, vec3 rd, float k)
 {
    float res = 1.0;
-   float t = 0.01;         // min-t see http://www.iquilezles.org/www/articles/rmshadows/rmshadows.htm
+   float t = 0.05;         // min-t see http://www.iquilezles.org/www/articles/rmshadows/rmshadows.htm
    for (int i=0; i<SHADOW_RAY_DEPTH; i++)
    {
       float h = Dist(ro + rd * t);
       res = min(res, k*h/t);
       t += h;
-      if (t > 20.0) break; // max-t
+      if (t > 10.0) break; // max-t
    }
-   return clamp(res, 0.0, 1.0);
+   return clamp(res,0.0,1.0);
 }
 
 vec3 GetNormal(vec3 pos)
@@ -248,14 +248,14 @@ vec4 Shading(vec3 pos, vec3 rd, vec3 norm)
       vec3 heading = normalize(-rd + lightDir);
       float spec = pow(max(0.0, dot(heading, norm)), specularHardness);
       light = (diffuse * light) + (spec * specular * lightColour);
-      if (shadows) light *= SoftShadow(pos, lightDir, 24.0);   // harder edged shadows on object
+      if (shadows) light *= SoftShadow(pos, lightDir, 64.0);   // harder edged shadows on object
       if (ao) light += CalcAO(pos, norm) * ambientFactor;
       return vec4(light, 1.0);
    }
    else
    {
       vec3 light = vec3(0.6,0.8,0.3) * max(0.0, dot(norm, lightDir));
-      if (shadows) light *= SoftShadow(pos, lightDir, 12.0);   // softer edged shadows on floor
+      if (shadows) light *= SoftShadow(pos, lightDir, 32.0);   // softer edged shadows on floor
       if (ao) light += CalcAO(pos, norm) * ambientFactor;
       return vec4(light, 1.0);
    }
@@ -268,8 +268,7 @@ vec3 Sky(in vec3 rd)
    float v = pow(1.0 - max(rd.y,0.0),6.);
    vec3 sky = mix(vec3(.1, .2, .3), vec3(.32, .32, .32), v);
    sky += lightColour * sunAmount * sunAmount * .25 + lightColour * min(pow(sunAmount, 800.0)*1.5, .3);
-   
-   return clamp(sky, 0.0, 1.0);
+   return sky;
 }
 
 // Camera function by TekF
@@ -331,13 +330,13 @@ void main()
          vec3 rd = normalize(GetRay(cameraLookat-cameraPos, p));
          vec4 _res = March(ro, rd);
          // TODO: If floor, optimize normal generation i.e. already known!!
-         if (_res.a == 1.0) res.xyz += clamp(Shading(_res.xyz, rd, GetNormal(_res.xyz)).xyz, 0.0, 1.0);
+         if (_res.a == 1.0) res.xyz += Shading(_res.xyz, rd, GetNormal(_res.xyz)).xyz;
          else res.xyz += Sky(rd);
          ang += d_ang;
       }
       res.xyz /= float(ANTIALIAS_SAMPLES);
    }
-   else if (dof)
+   /*else if (dof)
    {
       vec2 p = gl_FragCoord.xy / resolution.xy;
       vec3 ro = cameraPos;
@@ -354,19 +353,19 @@ void main()
          ro = cameraPos;
          rd = normalize(GetRay(cameraLookat-cameraPos, p));
          _res = March(ro, rd);
-         if (_res.a == 1.0) res.xyz += clamp(Shading(_res.xyz, rd, GetNormal(_res.xyz)).xyz, 0.0, 1.0);
+         if (_res.a == 1.0) res.xyz += Shading(_res.xyz, rd, GetNormal(_res.xyz)).xyz;
          else res.xyz += Sky(rd);
          ang += d_ang;
       }
       res.xyz /= float(DOF_SAMPLES);
-   }
+   }*/
    else
    {
       vec2 p = gl_FragCoord.xy / resolution.xy;
       vec3 ro = cameraPos;
       vec3 rd = normalize(GetRay(cameraLookat-cameraPos, p));
       res = March(ro, rd);
-      if (res.a == 1.0) res.xyz = clamp(Shading(res.xyz, rd, GetNormal(res.xyz)).xyz, 0.0, 1.0);
+      if (res.a == 1.0) res.xyz = Shading(res.xyz, rd, GetNormal(res.xyz)).xyz;
       else res.xyz = Sky(rd);
    }
    
@@ -392,8 +391,8 @@ var config = {
       r: 0.6, g: 0.7, b: 0.8
    },
    surface: {
-      specular: 8.0,
-      specularHardness: 32.0,
+      specular: 2.0,
+      specularHardness: 16.0,
       diffuse: 0.35,
       ambientFactor: 0.35
    },
@@ -417,9 +416,11 @@ var config = {
    }
 };
 
+var pause = false;
+var stats = new Stats();
+var aspect, gl;
 function init()
 {
-   var pause = false;
    document.addEventListener('keydown', function(e) {
       switch (e.keyCode)
       {
@@ -454,13 +455,13 @@ function init()
    panel.add(config.surface, "diffuse").min(0).max(1).step(0.05);
    panel.add(config.surface, "ambientFactor").min(0).max(1).step(0.05);
    panel = gui.addFolder('Global');
-   panel.add(config.global, "antialias", ["None", "Classic", "DOF"]).name("Anti Alias");
+   panel.add(config.global, "antialias", ["None", "Classic"]).name("Anti Alias");   //, "DOF"
    panel.add(config.global, "shadows").name("Shadows");
    panel.add(config.global, "ao").name("Ambient Occlusion");
    panel.add(config.global, "rotateWorld").name("Rotate World");
    if (!mobile) panel.open();
    panel = gui.addFolder('Polyhedra');
-   panel.add(config.polyhedra, "type").min(3).max(5).step(1);
+   panel.add(config.polyhedra, "type").min(1).max(5).step(1);
    panel.add(config.polyhedra, "u").min(0).max(1).step(0.01);
    panel.add(config.polyhedra, "v").min(0).max(1).step(0.01);
    panel.add(config.polyhedra, "w").min(0).max(1).step(0.01);
@@ -472,15 +473,14 @@ function init()
    panel.add(config.polyhedra, "textureSurface").name("Textured Edges");
    if (!mobile) panel.open();
    
-   var stats = new Stats();
    document.body.appendChild(stats.domElement);
    
    // create webgl context on the canvas element
-   var canvas = document.getElementById("canvas"),
-       aspect = canvas.width / canvas.height;
+   var canvas = document.getElementById("canvas");
+   aspect = canvas.width / canvas.height;
    try
    {
-      var gl = canvas.getContext("experimental-webgl");
+      gl = canvas.getContext("experimental-webgl");
    }
    catch (e)
    {
@@ -642,8 +642,14 @@ function init()
    })();
 }
       </script>
+      <script src="scripts/utils.js"></script>
+      <link rel="stylesheet" href="../../reset.css">
+      <link rel="stylesheet" href="./page.css">
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
    </head>
    <body onload="init()">
-      <canvas id="canvas" width="480" height="480">
+      <canvas id="canvas" width="512" height="512"></canvas>
+      <a href="#" id="fullscreen">Toggle Full Screen</a>
+      <a href="." id="back">Show me more awesome demos!</a>
    </body>
-</html>>
+</html>
